fixed bug where nav pills were not full width on mobile

--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ body {
     font-family: 'Spartan Regular', sans-serif;
     font-optical-sizing: auto;
     font-weight: 300;
-    font-size: 14px;
+    font-size: 11px;
     font-style: normal;
-    line-height: 25px;
+    line-height: 22px;
     background: url(./assets/background-stars.svg) center center / cover no-repeat rgb(var(--darkSlate));
     color: white;
 }
@@ -99,7 +99,7 @@ h4,
 }
 
 .fw-bold {
-    font-weight: 600 !important;
+    font-family: 'Spartan Bold', sans-serif;
 }
 
 main {
@@ -112,7 +112,7 @@ main::before {
     width: 100%;
     height: 1px;
     position: absolute;
-    top: 116px;
+    top: 113px;
     background: var(--bs-border-color);
     left: 0;
     right: 0;
@@ -137,7 +137,7 @@ main::before {
 }
 
 .geology-img {
-    bottom: -15px;
+    bottom: -20px;
     height: 110px;
     width: auto;
 }
@@ -299,7 +299,9 @@ li.nav-item {
 
 .nav-pills {
     position: absolute;
-    top: 67px;
+    top: -49px;
+    left: 0;
+    right: 0;
 }
 
 .nav-pills .nav-link:hover {
@@ -359,11 +361,6 @@ li.nav-item {
         line-height: 64px;
     }
 
-    h3,
-    .h3 {
-        font-size: 12px;
-    }
-
     .nav-pills {
         position: relative;
         top: 0px;
@@ -407,6 +404,11 @@ li.nav-item {
 
 @media (min-width: 1200px) {
 
+    body {
+        font-size: 14px;
+        line-height: 25px;
+    }
+
     h1,
     .h1 {
         font-size: 80px;
@@ -417,6 +419,11 @@ li.nav-item {
     .h2 {
         font-size: 40px;
         line-height: 52px;
+    }
+
+    h3,
+    .h3 {
+        font-size: 12px;
     }
 
     h4,
